--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,13 +18,13 @@
         {% endif %}
       </p>
     </div>
-
+<!-- 
     <div class="footer-right">
       <p class="mb-0">
         Powered by
         <a href="https://tensorloop.com" target="_blank" rel="noopener">tensorloop</a>
       </p>
-    </div>
+    </div> -->
 
   </div> <!-- div.d-flex -->
 </footer>
